# Nerd2D

./: CMakeLists.txt  Makefile
src/: main.cpp
